--- a/ejercicio.html
+++ b/ejercicio.html
@@ -48,7 +48,7 @@
 
    let cliente;
    const style =
-    "background-color: darkblue; color: white; font-style: italic; border: 5px solid hotpink; font-size: 2em;";
+    "background-color: black; color: violet; font-family: 'Press Start 2P', system-ui; border: 10px solid violet; font-size: 2em;";
 
    if (localStorage.getItem("cedula")) {
     cliente = new CuentaBancaria(
